--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./dist/style.css">
     <title>Programming Team</title>
 </head>
 <body>
@@ -13,32 +14,27 @@
     </header>
     <main id="content">
         <div class="card">
-        <h2>a</h2>
-        <p>ID: a</p>
-        <p>Email Address: a</p>
-        <p>Office Number: a</p>
+        <h2>Emily Kaufman</h2>
+        <p>ID: 1</p>
+        <p>Email Address: ekauf4@gmail.com</p>
+        <p>Office Number: 1</p>
     </div>
         <div class="card">
-        <h2>a</h2>
-        <p>ID: a</p>
-        <p>Email Address: a</p>
-        <a href="github.com/a">Github: a</a>
-    </div><div class="card">
-        <h2>a</h2>
-        <p>ID: a</p>
-        <p>Email Address: a</p>
-        <a href="github.com/a">Github: a</a>
+        <h2>Brian Kaufman</h2>
+        <p>ID: 2</p>
+        <p>Email Address: bpkaufman4@gmail.com</p>
+        <a href="https://github.com/bpkaufman4">Github: bpkaufman4</a>
     </div>
         <div class="card">
-        <h2>a</h2>
-        <p>ID: a</p>
-        <p>Email Address: a</p>
-        <p>School: a</p>
+        <h2>Christian Kaufman</h2>
+        <p>ID: 3</p>
+        <p>Email Address: ckauf4@gmail.com</p>
+        <p>School: KU</p>
     </div><div class="card">
-        <h2>a</h2>
-        <p>ID: a</p>
-        <p>Email Address: a</p>
-        <p>School: a</p>
+        <h2>Olivia Kaufman</h2>
+        <p>ID: 4</p>
+        <p>Email Address: okauf4@gmail.com</p>
+        <p>School: KU</p>
     </div>
     </main>
     <script src="../src/scripts.js"></script>
